[Ritick]add: method in affiliatedcontroller to get department by physician id